--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "chaleno",
         "colour",
+        "Hibz",
         "MFAE",
-        "sephora"
+        "sephora",
+        "vspace"
     ]
 }
