amazon uk  address change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "aliexpress",
         "chaleno",
         "colour",
         "Hibz",
         "MFAE",
         "sephora",
+        "trendyol",
         "vspace"
     ]
 }
